# django-project-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  biome.json  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js
apps/pages/: urls.py  views.py
apps/pages/templates/pages/: about.html  home.html
config/: env.py
config/environments/: base.py  development.py  production.py  test.py
config/settings/: asgi.py  routes.py  wsgi.py
src/scripts/: app.js
src/scripts/components/: csrf_token.js  flash.js  index.js
src/styles/: style.css
templates/layouts/: base.html
templates/pages/: about.html  home.html
templates/shared/: flash.html
