[tool.poetry]
name = "pydevs"
version = "0.1.0"
description = ""
authors = ["5xCampus <dev@5xcampus.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.4"
django = "^5.0.7"
psycopg = "^3.2.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"
pre-commit = "^3.7.1"
commitizen = "^3.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 140
