[tool.poetry]
name = "pydevs"
version = "0.1.0"
description = ""
authors = ["5xCampus <dev@5xcampus.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.0"
django = "^5.1.3"
psycopg = "^3.2.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
rich = "^13.9.4"
pre-commit = "^4.0.1"
commitizen = "^3.30.1"
djlint = "^1.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 140
